--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,5 +1,4 @@
 /* 슬라이드 좌우 버튼 */
-/* 버튼 숨기기 */
 .slide-prev-bt.swiper-button-disabled {
   display: none !important;
 }
@@ -9,37 +8,54 @@
 
 .slide-prev-bt {
   position: absolute;
-  left: 0;
   top: 50%;
-  z-index: 2;
-  /* 내용물 만 옮겨준다. */
-  transform: translate(-50%, -50%);
-
+  left: 0;
   width: 48px;
   height: 48px;
-  background-color: rgba(255, 255, 255, 0.7);
-  border: 1px solid #e3e2e3;
-  border-radius: 50%;
-  cursor: pointer;
-  /* 그림자 */
+  border: 1px solid #e3e3e3;
   box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
 }
+
 .slide-prev-bt img {
   transform: rotate(180deg);
 }
+
 .slide-next-bt {
   position: absolute;
-  right: 0;
   top: 50%;
-  z-index: 2;
-  transform: translate(50%, -50%);
-
+  right: 0;
   width: 48px;
   height: 48px;
-  background-color: rgba(255, 255, 255, 0.7);
-  border: 1px solid #e3e2e3;
-  border-radius: 50%;
-  cursor: pointer;
-  /* 그림자 */
+  border: 1px solid #e3e3e3;
   box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.13);
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  border-radius: 50%;
+  transform: translate(50%, -50%);
+}
+
+.recommend-slide-all {
+  position: relative;
+  display: block;
+  height: auto;
+  text-align: center;
+  font-size: 1.4rem;
+  color: #3a3a3a;
+  font-weight: 700;
+  top: 40%;
+}
+.recommend-slide-all i {
+  display: block;
+  width: 5rem;
+  height: 5rem;
+  margin: 0 auto 0.6rem;
+  border-radius: 5rem;
+  background: url(../images/allright.svg) no-repeat 50%;
 }
