--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -158,7 +158,7 @@
   display: block;
   margin-left: 6px;
 
-  /* background: url("http://localhost:3000/images/badge_hot.svg") no-repeat center; */
+  background: url("../images/badge_hot.svg") no-repeat center;
 }
 
 .header-cate li a img {
