--- a/src/styles/visual.css
+++ b/src/styles/visual.css
@@ -1,21 +1,3 @@
-.box-wrap {
-  position: relative;
-  width: 500px;
-  height: 300px;
-  background-color: hotpink;
-  margin: 0 auto;
-  margin-bottom: 5000px;
-  border-top: 1px solid blue;
-}
-.box {
-  position: relative;
-  display: block;
-  border: 5px solid #fff;
-  width: 50px;
-  height: 50px;
-  background-color: #000;
-}
-
 .visual {
   position: relative;
   padding-top: 30px;
@@ -33,8 +15,6 @@
   height: 100%;
 }
 
-.visual-slide {
-}
 .visual-slide-item {
   position: relative;
   width: 628px;
@@ -45,9 +25,6 @@
   display: block;
   overflow: hidden;
   border-radius: 13px;
-}
-.visual-slide-item a img {
-  width: 100%;
 }
 
 .visual-slide-prev {
@@ -76,7 +53,7 @@
   display: block;
   margin: 0 auto;
   background: url("../images/slider_arrow.svg") no-repeat center;
-
+  background-color: none;
   transform: rotateY(180deg);
 }
 
@@ -104,5 +81,6 @@
   height: 18px;
   display: block;
   margin: 0 auto;
-  /* background: url("http://localhost:3000/images/slider_arrow.svg") no-repeat center; */
+  background: url("../images/slider_arrow.svg") no-repeat center;
+  background-color: none;
 }
